# hicops

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.hpp.in  dbprocessorLinux.py  hicops.py  pcdsframe.py  pcdsframehpc.py  pcdsframeubuntu.py  pcdsframewindows.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cccp.yml  ccpp.yml
cfirindex/: Makefile  coding_standard_eclipse.xml  hicops.cpp  pcdsframe.cpp  slm.cpp
cfirindex/include/: common.h  config.h  dslim.h  dslim_comm.h  dslim_fileout.h  dslim_score.h  expeRT.h  hyperscore.h  keyval.h  lbe.h  lwbuff.h  lwqueue.h  lwvector.h  minheap.h  mods.h  msquery.h  scheduler.h  sgsmooth.h  slm_dsts.h  slmerr.h  utils.h
cfirindex/mstoolkit/: Makefile
cfirindex/mstoolkit/include/: MSReader.h  MSToolkitTypes.h  Spectrum.h  mzParser.h
cfirindex/mstoolkit/src/MSToolkit/: RAWReader.cpp  Spectrum.cpp
cfirindex/mstoolkit/src/mzParser/: BasicChromatogram.cpp  BasicSpectrum.cpp  PWIZface.cpp  RAMPface.cpp  mzMLReader.cpp  mzParser.cpp  mzp_base64.cpp  saxhandler.cpp  saxmzmlhandler.cpp  saxmzxmlhandler.cpp
cfirindex/preprocess/: analysis.py  cluster.py  gendata.sh
cfirindex/src/: Makefile  dslim.cpp  dslim_comm.cpp  dslim_fileout.cpp  dslim_query.cpp  dslim_score.cpp  dslim_scproc.cpp  expeRT.cpp  hyperscore.cpp  lbe_internal.cpp  mods.cpp  msquery.cpp  scheduler.cpp  utils.cpp
cmake/Templates/: common.hpp.in  config.hpp.in
counter/: Makefile  counter.cpp
counter/include/: config.h  lbe.h  utils.h
counter/src/: Makefile  lbe_internal.cpp  mods.cpp
dbtools/: cluster.sh  kthocc.sh
docs/: _config.yml  about.md  contributing.md  contributions.md  features.md  getting_started.md  index.md  installation.md  instrumentation.md  integrate.md  report.md  results.md  support.md  tools.md
docs/_data/: toc.yml
docs/_layouts/: default.html
docs/features/: instrumentation.md
docs/getting_started/: instrument.md  integrate.md  xsede.md
docs/installation/: packages.md  prerequisites.md
docs/tools/dbtools/: dbprep.md
docs/tools/ms2prep/: extractms2.md  raw2ms2.md
docs/tools/runtime/: hicops_comet.md  hicops_config.md  psm2excel.md
examples/jobscripts/: cfir  counter  nodeinfo  numainfo
ms2pip/: config.txt
sbatch/: counter  expt  nodeinfo  numainfo
scripts/: CMakeLists.txt  extractms2.py  psm2excel.py
scripts/dbtools/: CMakeLists.txt  cluster.sh  db_prep.sh  dbprocessorWindows.py  sep_by_len.sh
scripts/dbtools/deprecated/: kthocc.sh
scripts/ms2prep/: CMakeLists.txt  abymods.py  extractms2.py  getseqs.py  hdb.py  msconvert.sh  raw2ms2.sh
scripts/ms2prep/deprecated/: cluster.py  uniq.py
scripts/ms2processor/: CMakeLists.txt  psm2excel.py
scripts/preprocess/: CMakeLists.txt
scripts/preprocess/python/: CMakeLists.txt  hdb.py
scripts/preprocess/shell/: CMakeLists.txt  sep_by_len.sh
scripts/pywrappers/: CMakeLists.txt  hicops_comet.py  psm2excel.py
scripts/tools/: CMakeLists.txt  gen_expts.sh  hicops_comet.py
seqgen/: Makefile
seqgen/include/: common.h  config.h  lbe.h  mods.h  slm_dsts.h  slmerr.h
seqgen/src/: Makefile  lbe_internal.cpp  mods.cpp  slm.cpp  utils.cpp
slurm/scripts/: info
source/: .gitignore  CMakeLists.txt  Makefile  README.md
source/app/: CMakeLists.txt  hicops.cpp  hicops.hpp  hicops_config.py
source/core/: CMakeLists.txt  dslim.cpp  dslim_comm.cpp  dslim_fileout.cpp  dslim_query.cpp  dslim_score.cpp  dslim_scproc.cpp  expeRT.cpp  hicops_instr.cpp  lbe_internal.cpp  mods.cpp  ms2prep.cpp  msquery.cpp  scheduler.cpp  sgsmooth.cpp  utils.cpp
source/core/include/: common.h  config.h  dslim.h  dslim_comm.h  dslim_fileout.h  dslim_score.h  expeRT.h  hicops_instr.hpp  keyval.h  lbe.h  lwbuff.h  lwqueue.h  lwvector.h  minheap.h  mods.h  ms2prep.hpp  msquery.h  msquery.hpp  scheduler.h  sgsmooth.h  slm_dsts.h  slmerr.h  utils.h
source/counter/: CMakeLists.txt  app.cpp  counter.cpp  counter.hpp  lbe_internal.cpp  mods.cpp  utils.cpp
source/counter/include/: common.h  lbe.h  mods.h  slm_dsts.h  utils.h
source/include/: dslim.h  dslim_score.h  lbe.h  mods.h  slmerr.h
source/preprocess/: abymods.py  dbscan.py  getseqs.py  uniq.py
source/src/: Makefile  dslim_comm.cpp  dslim_query.cpp  sgsmooth.cpp  utils.cpp
tools/: CMakeLists.txt
tools/dbtools/: CMakeLists.txt  db_prep.sh  dbprep_linux.py  dbprep_win.py
tools/dbtools/deprecated/: kthocc.sh  sep_by_len.sh
tools/ms2prep/: CMakeLists.txt  extractms2.py  ms2hdf5.py  mspartition.py  raw2ms2.sh
tools/ms2prep/deprecated/: analysis.py  cluster.py  dbscan.py  getseqs.py  hdb.py  uniq.py
tools/runtime/: CMakeLists.txt  gen_expts.sh  gen_slurms.sh  hicops_comet.py  psm2excel.py  psm2tsv.py
