
#----------------------------------------------------------------------------------------#
#   dbtools scripts
#----------------------------------------------------------------------------------------#

message(STATUS "Adding dbtools...")
add_subdirectory(dbtools)

#----------------------------------------------------------------------------------------#
#   ms2data scripts
#----------------------------------------------------------------------------------------#
message(STATUS "Adding ms2data scripts...")
add_subdirectory(ms2data)

#----------------------------------------------------------------------------------------#
#   preprocessor scripts
#----------------------------------------------------------------------------------------#
message(STATUS "Adding preprocess tools...")
add_subdirectory(preprocess)

