
#----------------------------------------------------------------------------------------#
#   dbtools scripts
#----------------------------------------------------------------------------------------#

message(STATUS "Adding dbtools...")
add_subdirectory(dbtools)

#----------------------------------------------------------------------------------------#
#   python wrapper scripts
#----------------------------------------------------------------------------------------#
message(STATUS "Adding python wrapper scripts...")
add_subdirectory(pywrappers)

#----------------------------------------------------------------------------------------#
#   MS2 processing scripts
#----------------------------------------------------------------------------------------#
message(STATUS "Adding MS2 preprocessing tools...")
add_subdirectory(ms2prep)

