
#----------------------------------------------------------------------------------------#
#   dbtools scripts
#----------------------------------------------------------------------------------------#

message(STATUS "Adding dbtools...")
add_subdirectory(dbtools)

#----------------------------------------------------------------------------------------#
#   tools 
#----------------------------------------------------------------------------------------#
message(STATUS "Adding HiCOPS tools...")
add_subdirectory(tools)

#----------------------------------------------------------------------------------------#
#   MS2 processing scripts
#----------------------------------------------------------------------------------------#
message(STATUS "Adding MS2 preprocessing tools...")
add_subdirectory(ms2prep)

