
#----------------------------------------------------------------------------------------#
#   hicops source
#----------------------------------------------------------------------------------------#

message(STATUS "Adding core...")
add_subdirectory(core)

message(STATUS "Adding app")
add_subdirectory(app)

#----------------------------------------------------------------------------------------#
#   counter source
#----------------------------------------------------------------------------------------#
message(STATUS "Adding counter source...")
add_subdirectory(counter)
