
#----------------------------------------------------------------------------------------#
#   dbtools scripts
#----------------------------------------------------------------------------------------#

message(STATUS "Adding Database tools...")
add_subdirectory(dbtools)

#----------------------------------------------------------------------------------------#
#   tools 
#----------------------------------------------------------------------------------------#
message(STATUS "Adding HiCOPS runtime tools...")
add_subdirectory(runtime)

#----------------------------------------------------------------------------------------#
#   MS2 processing scripts
#----------------------------------------------------------------------------------------#
message(STATUS "Adding MS2 preprocessing tools...")
add_subdirectory(ms2prep)

