#----------------------------------------------------------------------------------------#
#   python scripts
#----------------------------------------------------------------------------------------#
add_subdirectory(python)

#----------------------------------------------------------------------------------------#
#   shell scripts
#----------------------------------------------------------------------------------------#
add_subdirectory(shell)
